--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -676,7 +676,7 @@ restaurant ,/n./@餐馆;
 restrained ,/adj./@克制的;
 resurgence ,/n./@復活;,/n./@再現;,/n./@再起;
 retrospect ,/v./@回顾;
-revelation ,/n./@揭示;
+revelation ,/n./@揭示;,/n./@曝光;,/n./@披露;
 revolution ,/n./@革命;,/n./@变革;,/n./@循環;,/n./@旋轉;
 rhetorical ,/adj./@修辭的;,/adj./@修辭學的;,/adj./@誇張的;
 ridiculous ,/adj./@荒谬的;
