--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -293,6 +293,7 @@ microscopic ,/adj./@精微的;,/adj./@微小的;,/adj./@顯微鏡的;,/adj./@只
 mindfulness ,/n./@留心;,/n./@察覺;,/n./@正念;,/n./@注意;,/n./@覺知;
 mischievous ,/adj./@恶意的;,/adj./@惡作劇的;,/adj./@傷害性的;,/adj./@有害的;
 misconstrue ,/vt./@誤會;,/vt./@误解;
+molestation ,/n./@騷擾;,/n./@性騷擾;,/n./@猥褻;
 multinomial ,/n./@多項式;,/adj./@多項的;
 nationality ,/n./@国籍;
 Neanderthal ,/n./@尼安德特人;,/adj./@尼安德特人的;
@@ -306,6 +307,7 @@ objectivity ,/n./@客觀性;,/n./@客觀;
 observation ,/n./@观察;,/n./@监视;
 obstruction ,/n./@障碍;,/n./@阻碍;
 opportunity ,/n./@機會;,/n./@機遇;,/n./@時機;
+organically ,/adv./@有機地;,/adv./@以有機方式地;,/adv./@有機體地;,/adv./@器官性地;
 orientation ,/n./@定向;,/n./@傾向性;
 orthography ,/n./@正字法;,/n./@拼寫法;
 oscillation ,/n./@震盪;,/n./@振動;,/n./@擺動;
