--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -213,7 +213,7 @@ deed ,/n./@行動;,/n./@功績;,/n./@證書;,/n./@契據;
 deem ,/v./@認爲;
 deep ,/adj./@深@的;
 deer ,/n./@鹿;
-defy ,/v./@對抗;,/v./@挑戰;
+defy ,/v./@對抗;,/v./@挑戰;,/vt./@蔑視;
 demo ,/n./@演示;
 dent ,/n./@牙齒;
 deny ,/v./@否認;
@@ -222,6 +222,7 @@ dial ,/v./@撥打;,/n./@轉盤;,/n./@鐘盤;,/n./@刻度盤;
 dice ,/n./@色子;,/n./@骰子;
 dick ,/n./@陰莖;
 diet ,/n./@飲食;,/n./@節食;
+dime ,/n./@一角硬幣;,/n./@10分硬幣;
 dine ,/v./@用餐;
 dire ,/adj./@可怕的;,/adj./@悲慘的;,/adj./@恐怖的;,/adj./@極端的;
 dirt ,/n./@塵土;,/n./@污垢;
@@ -1062,6 +1063,7 @@ tree ,/n./@樹;
 trek ,/n./@跋涉;,/v./@搬運;,/vi./@长途跋涉;
 trim ,/v./@修剪;,/v./@削減;
 trio ,/n./@三件套;,/n./@三人組;,/n./@三重奏;,/n./@三重唱;
+trip ,/n./@旅行;,/n./@行程;,/n./@絆倒;,/n./@幻覺;,/n./@輕快的步伐;,/v./@絆倒;,/vi./@輕快地走;,/v.//redirected./@target="trip out";,/v.//redirected./@target="trip up";
 trot ,/v./@小步快跑;,/v./@碎步急行;,/v./@快步走;
 troy ,/n./@特洛伊;
 true ,/adj./@眞的;
