--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -292,7 +292,7 @@ court ,/n./@法庭;
 cover ,/n./@封面;,/v./@覆蓋;
 covet ,/vt./@贪求;
 cower ,/v./@退縮;,/v./@膽怯;,/v./@畏縮;
-crack ,/n./@裂縫;,/v./@破裂;,/vi./@爆裂;
+crack ,/n./@裂縫;,/v./@破裂;,/vi./@爆裂;,/vt./@使霹啪作響;,/vt./@敲開;,/vt./@砸開;
 craft ,/n./@工藝;,/n./@手藝;
 cramp ,/v./@痙攣;
 crane ,/v./@伸長;
@@ -1249,7 +1249,7 @@ swoop ,/v./@猛撲;,/v./@俯衝;,/v./@襲擊;
 sword ,/n./@劍;
 syrup ,/n./@糖漿;,/n./@糖水;,/n./@果汁;
 table ,/n./@桌子;,/n./@表格;
-taboo ,/v./@禁忌;,/v./@禁止;,/n./@禁忌;
+taboo ,/v./@禁忌;,/v./@禁止;,/n./@禁忌;,/adj./@禁忌的;,/adj./@忌諱的;
 tacit ,/adj./@緘默的;,/adj./@不言而喻的;,/adj./@心照不宣的;,/adj./@默許的;
 taiga ,/n./@針葉林區;,/n./@針葉樹林地帶;
 tardy ,/adj./@緩慢的;,/adj./@遲緩的;
