--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -748,6 +748,7 @@ impede ,/v./@妨礙;,/v./@阻礙;
 import ,/v./@輸入;,/v./@進口;
 impose ,/v./@實施;,/v./@推行;
 incept ,/vt./@開始;
+incest ,/n./@亂倫;
 income ,/n./@收入;
 indeed ,/adv./@當然;,/adv./@確實;
 indent ,/v./@縮行;
@@ -997,6 +998,7 @@ obsess ,/v./@迷住;,/v./@迷戀;,/v./@著迷;
 obtain ,/v./@獲得;,/v./@習得;
 obtuse ,/adj./@遲鈍的;,/adj./@圓頭的;,/adj./@不鋒利的;
 occupy ,/v./@佔用;,/v./@佔據;,/v./@佔領;,/v./@擔任;
+ocelot ,/n./@豹貓;
 ocular ,/adj./@眼睛的;,/adj./@視覺的;
 oddity ,/n./@古怪;,/n./@奇特;,/n./@怪事;,/n./@怪人;
 odious ,/adj./@可憎的;
