--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -70,6 +70,7 @@ anarchic ,/adj./@無政府的;
 anathema ,/n./@詛咒;
 ancestor ,/n./@祖先;
 anecdote ,/n./@軼事;
+aneurism ,/n./@動脈瘤;
 annotate ,/v./@注释;
 announce ,/v./@宣布;
 annoying ,/adj./@令人烦恼的;
@@ -399,7 +400,7 @@ document ,/n./@文件;
 domestic ,/adj./@本国的;,/adj./@國內的;,/adj./@家庭的;,/adj./@馴養的;
 dominant ,/adj./@显性的;
 dominate ,/v./@控制;,/v./@支配;,/v./@统治;
-dominion ,/n./@主权;
+dominion ,/n./@主权;,/n./@所有權;,/n./@統治權;,/n./@統治;,/n./@管轄;,/n./@領土;,/n./@領地;
 donation ,/n./@捐赠;
 dopamine ,/n./@多巴胺;
 doubtful ,/adj./@怀疑的;
@@ -516,6 +517,7 @@ flexible ,/adj./@灵活的;
 flippant ,/adj./@輕率的;
 flourish ,/v./@茂盛;,/v./@繁荣;,/v./@兴旺;
 fluently ,/adv./@流畅地;
+fluoride ,/n./@氟化物;,/adj./@氟化物的;
 flurried ,/adj./@慌張的;,/adj./@慌亂的;
 football ,/n./@足球;
 footwear ,/n./@鞋類;
