--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -627,6 +627,7 @@ intestine ,/n./@肠;
 intricate ,/adj./@复杂的;,/adj./@錯綜複雜的;,/adj./@複雜精細的;
 intrinsic ,/adj./@本质的;,/adj./@固有的;,/adj./@本身的;,/adj./@內在的;
 introduce ,/v./@介紹;,/v./@引進;,/v./@采用;
+intrusion ,/n./@侵入;,/n./@闖入;,/n./@干涉;,/n./@侵擾;,/n./@打擾;
 intuition ,/n./@直觉;
 intuitive ,/adj./@直觉的;
 invention ,/n./@发明;,/n./@创造;
