--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -293,6 +293,7 @@ microscopic
 mindfulness
 mischievous
 misconstrue
+molestation
 multinomial
 nationality
 Neanderthal
@@ -306,6 +307,7 @@ objectivity
 observation
 obstruction
 opportunity
+organically
 orientation
 orthography
 oscillation
