--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -70,6 +70,7 @@ anarchic
 anathema
 ancestor
 anecdote
+aneurism
 annotate
 announce
 annoying
@@ -516,6 +517,7 @@ flexible
 flippant
 flourish
 fluently
+fluoride
 flurried
 football
 footwear
