--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -748,6 +748,7 @@ impede
 import
 impose
 incept
+incest
 income
 indeed
 indent
@@ -997,6 +998,7 @@ obsess
 obtain
 obtuse
 occupy
+ocelot
 ocular
 oddity
 odious
