--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -71,6 +71,7 @@ communicate ,/v./@交流;
 compartment ,/n./@隔间;,/n./@隔室;,/n./@区划;,/n./@客房;
 competition ,/n./@竞争;
 competitive ,/adj./@竞争的;
+complacency ,/n./@自滿;,/n./@自鳴得意;
 complicated ,/adj./@复杂的;
 comportment ,/n./@举止;
 composition ,/n./@作文;
@@ -336,6 +337,7 @@ perspective ,/n./@观点;,/n./@视角;
 pessimistic ,/adj./@悲观的;
 planetarium ,/n./@天文館;,/n./@天文臺;,/n./@天象儀;,/n./@行星儀;,/n./@天體運轉模型;
 poltergeist ,/n./@搗蛋鬼;
+polygrapher ,/n./@測謊師;
 pomegranate ,/n./@石榴;,/n./@石榴树;
 pontificate ,/n./@教宗職權;,/n./@教宗任期;
 possibility ,/n./@可能性;
@@ -431,7 +433,7 @@ subtraction ,/n./@减;
 superficial ,/adj./@表面的;,/adj./@膚淺的;
 superiority ,/n./@优越;,/n./@优势;,/n./@优越感;,/n./@优越性;
 supervision ,/n./@監督;
-suppression ,/n./@鎮壓;,/n./@壓制;
+suppression ,/n./@鎮壓;,/n./@壓制;,/n./@封鎖;
 sustainable ,/adj./@可持续的;
 Switzerland ,/n./@瑞士;
 sympathetic ,/adj./@同情的;
