--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -234,6 +234,7 @@ sledgehammer ,/n./@大錘;
 sophisticate ,/v./@复杂化;
 sporadically ,/adv./@零星地;,/adv./@偶發的;
 stereoscopic ,/adj./@立體的;,/adj./@有立體感的;,/adj./@立體成像的;,/adj./@體視的;
+subconscious ,/n./@潛意識;,/n./@下意識;,/adj./@潛意識的;,/adj./@下意識的;
 subscription ,/n./@订阅;
 subsequently ,/adv./@隨後;,/adv./@其後;,/adv./@接著;
 substitution ,/n./@代替;,/n./@置换;
