--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -424,9 +424,10 @@ erect ,/adj./@竪直的;
 erode ,/v./@腐蝕;
 error ,/n./@錯誤;
 essay ,/n./@散文;,/n./@論文;,/n./@小品文;
-ether ,/n./@乙醚;,/n./@以太;
+ether ,/n./@乙醚;,/n./@以太;,/n./@醚;,/n./@蒼穹;
 ethic ,/adj./@道德的;
 ethos ,/n./@精神特質;,/n./@價值理念;,/n./@性格氣質;,/n./@價值觀;,/n./@道德思想;,/n./@道德觀;,/n./@信條;
+ethyl ,/n./@乙基;
 evade ,/v./@逃脫;,/vt./@躲避;,/vt./@逃避;,/vt./@迴避;
 event ,/n./@事件;
 every ,/adj./@每@一;
