--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -139,6 +139,7 @@ bandit ,/n./@盜賊;,/n./@强盜;,/n./@土匪;,/n./@匪徒;,/n./@盜匪;
 banish ,/v./@放逐;,/v./@驅逐;,/vt./@驅除;
 banner ,/n./@旗幟;,/n./@橫幅;,/n./@標語;
 banter ,/v./@戲虐;,/n./@打趣;,/vi./@談笑;,/vt./@取笑;
+barium ,/n./@鋇;
 barley ,/n./@大麥;
 barrel ,/n./@桶;,/n./@管;,/n./@槍管;,/n./@砲筒;,/n./@大桶;,/n./@一桶的量;,/n./@36加侖的量;
 barren ,/adj./@不育的;,/adj./@貧瘠的;
@@ -546,7 +547,7 @@ excuse ,/v./@原諒;,/n./@借口;
 exempt ,/vt./@免除;
 exhale ,/v./@呼氣;
 exhume ,/v./@掘出;,/vt./@發掘;
-exotic ,/adj./@外國的;
+exotic ,/adj./@來自外國的;,/adj./@外來的;,/adj./@異國情調的;,/adj./@外國情調的;,/adj./@奇異的;
 expand ,/v./@擴大;
 expect ,/v./@期望;,/v./@預料;
 expert ,/n./@專家;
@@ -699,6 +700,7 @@ hassle ,/n./@麻煩;,/n./@困難;,/v./@爭辯;
 hasten ,/v./@加速;
 hatred ,/n./@仇恨;
 hazard ,/n./@危险;,/n./@隐患;,/n./@风险;,/n./@障碍物;
+hazmat ,/redirected./@target="hazardous material";
 health ,/n./@健康;
 hearth ,/n./@壁爐;,/n./@爐邊;
 heaven ,/n./@天堂;,/n./@天空;
