--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -180,6 +180,7 @@ bristly ,/adj./@有剛毛的;,/adj./@易怒的;
 Britain ,/n./@不列顛;
 British ,/adj./@英國的;,/adj./@英語的;,/adj./@不列顛的;,/n./@英國人;
 brittle ,/adj./@易碎的;
+bromine ,/n./@溴;
 brothel ,/n./@妓院;
 brother ,/n./@兄弟;
 brought ,/v./@帶;
@@ -197,6 +198,7 @@ buttock ,/n./@半邊臀部;
 cabbage ,/n./@捲心菜;,/n./@圓白菜;
 Cabbala ,/redirected./@target="Kabbalah";
 cabinet ,/n./@內閣;,/n./@壁櫥;,/n./@座舱;,/n./@柜;
+cadaver ,/n./@屍體;,/n./@死屍;,/n./@屍首;
 calcium ,/n./@钙;
 canvass ,/vt./@征求;,/vt./@兜售;,/vt./@拉选票;
 capable ,/adj./@潛在的;,/adj./@可能的;
@@ -383,6 +385,7 @@ darling ,/adj./@親愛的;
 dataset ,/n./@数据集;,/n./@资料集;,/n./@资料组;
 dealing ,/n./@處理;,/n./@交往;,/n./@生意;
 debacle ,/n./@崩潰;,/n./@災害;,/n./@解凍;
+debrief ,/vt./@聽取匯報;,/vt./@聽取報告;
 deceive ,/v./@欺騙;
 decency ,/n./@體面;
 decimal ,/adj./@十進制的;,/adj./@小數的;
