--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -467,6 +467,7 @@ esoteric ,/adj./@秘传的;,/adj./@限于圈内人的;,/adj./@深奧的;
 espresso ,/n./@濃咖啡;
 estimate ,/v./@估计;
 estrange ,/v./@疏遠;,/v./@離間;
+ethereal ,/adj./@飄逸的;,/adj./@縹緲的;,/adj./@非人間的;,/adj./@醚的;,/adj./@乙醚的;,/adj./@以太的;
 euphoria ,/n./@極度愉快;
 evacuate ,/v./@疏散;,/v./@撤退;,/v./@排泄;
 evaluate ,/v./@评估;
