--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -71,6 +71,7 @@ communicate
 compartment
 competition
 competitive
+complacency
 complicated
 comportment
 composition
@@ -336,6 +337,7 @@ perspective
 pessimistic
 planetarium
 poltergeist
+polygrapher
 pomegranate
 pontificate
 possibility
