--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -139,6 +139,7 @@ bandit
 banish
 banner
 banter
+barium
 barley
 barrel
 barren
@@ -699,6 +700,7 @@ hassle
 hasten
 hatred
 hazard
+hazmat
 health
 hearth
 heaven
