--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -180,6 +180,7 @@ bristly
 Britain
 British
 brittle
+bromine
 brothel
 brother
 brought
@@ -197,6 +198,7 @@ buttock
 cabbage
 Cabbala
 cabinet
+cadaver
 calcium
 canvass
 capable
@@ -383,6 +385,7 @@ darling
 dataset
 dealing
 debacle
+debrief
 deceive
 decency
 decimal
