--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -460,6 +460,7 @@ expectant
 expection
 expedient
 expensive
+expletive
 explosion
 explosive
 expressly
@@ -555,6 +556,7 @@ hypocrisy
 hypomania
 hypomanic
 identical
+ideologue
 illegible
 illogical
 imaginary
@@ -828,6 +830,7 @@ pneumatic
 poisonous
 political
 pollution
+polygraph
 ponderous
 porcelain
 portfolio
