--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -81,6 +81,7 @@ conceivable ,/adj./@可能的;
 concentrate ,/v./@集中;
 conditional ,/adj./@條件性的;,/adj./@有條件的;
 condominium ,/n./@共同統治;
+confabulate ,/vi./@虛談;,/vi./@虛構;,/vi./@交談;,/vi./@談論;
 confederate ,/adj./@同盟的;,/n./@同盟;,/n./@同盟國;,/n./@同盟者;,/vt./@聯盟;
 confinement ,/n./@限制;,/n./@監禁;,/n./@分娩;
 confounding ,/adj./@令人困惑的;
@@ -400,7 +401,7 @@ retaliation ,/n./@報復;
 retribution ,/n./@报应;
 retroactive ,/adj./@追溯性的;
 revisionism ,/n./@修正主義;
-rudimentary ,/adj./@基本的;,/adj./@初步的;
+rudimentary ,/adj./@基本的;,/adj./@初步的;,/adj./@早期的;,/adj./@原始的;,/adj./@未完全發展的;
 salvolatile ,/n./@嗅鹽;,/n./@揮發鹽;
 sarcophagus ,/n./@石棺;
 scholarship ,/n./@奖学金;
@@ -434,6 +435,7 @@ superficial ,/adj./@表面的;,/adj./@膚淺的;
 superiority ,/n./@优越;,/n./@优势;,/n./@优越感;,/n./@优越性;
 supervision ,/n./@監督;
 suppression ,/n./@鎮壓;,/n./@壓制;,/n./@封鎖;
+suspenseful ,/adj./@緊張的;,/adj./@擔心的;,/adj./@提心吊膽的;,/adj./@扣人心弦的;,/adj./@懸疑的;,/adj./@有懸念的;
 sustainable ,/adj./@可持续的;
 Switzerland ,/n./@瑞士;
 sympathetic ,/adj./@同情的;
