--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -108,6 +108,7 @@ predominantly ,/adv./@主要地;,/adv./@顯著的;
 prepositional ,/adj./@介詞的;,/adj./@前置詞的;
 procrastinate ,/vi./@拖延;
 pronunciation ,/n./@發音;,/n./@讀法;,/n./@讀音;
+pseudoscience ,/n./@偽科學;
 psychological ,/adj./@心理学的;
 psychosomatic ,/adj./@心理压力造成的;
 quadrilateral ,/n./@四邊形;,/adj./@四邊形的;,/adj./@四邊的;
@@ -127,6 +128,7 @@ seismological ,/adj./@地震学的;
 semiconductor ,/n./@半導體;
 sophisticated ,/adj./@复杂的;
 specification ,/n./@规格;,/n./@说明书;,/n./@详述;
+stereotypical ,/adj./@刻板印象的;,/adj./@類型化的;,/adj./@模式化的;
 subordination ,/n./@从属;,/n./@顺从;
 superannuated ,/adj./@過時的;,/adj./@老朽的;
 supplementary ,/adj./@增补的;
