--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -836,6 +836,7 @@ rest ,/v./@休息;,/n./@休息;
 rice ,/n./@米飯;
 rich ,/adj./@富有的;
 rife ,/adj./@流行的;,/adj./@蔓延的;,/adj./@充斥的;,/adj./@盛传的;
+riff ,/vi./@長時間地談論;
 rift ,/n./@裂縫;,/v./@裂開;
 rime ,/n./@雾凇;
 ring ,/n./@鈴聲;,/n./@戒指;
