--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -154,7 +154,7 @@ blond ,/adj./@金髮的;
 blood ,/n./@血;
 bloom ,/v./@綻放;
 bluff ,/v./@嚇唬;
-blunt ,/adj./@鈍的;
+blunt ,/adj./@鈍的;,/adj./@耿直的;,/adj./@直率的;,/adj./@不鋒利的;,/adj./@直截了當的;,/adj./@圓頭的;
 blurt ,/v./@突然說出;
 board ,/n./@板;
 boast ,/v./@自誇;
@@ -317,7 +317,7 @@ crook ,/n./@骗子;,/n./@弯曲;,/n./@弯处;,/n./@坏蛋;,/v./@彎曲;,/n./@鉤
 cross ,/v./@穿越;,/n./@叉形;,/n./@十字架;,/n./@十字标;,/adj./@横向的;,/adj./@斜线的;,/vt./@穿过;,/vt./@横穿;
 crowd ,/n./@人羣;
 crown ,/n./@王冠;
-crude ,/adj./@粗糙的;
+crude ,/adj./@粗糙的;,/adj./@未加工的;,/adj./@粗略的;
 cruel ,/adj./@殘酷的;
 crumb ,/n./@面包屑;,/n./@碎屑;,/v./@弄碎;,/n./@可鄙的人;
 crush ,/v./@鎭壓;
@@ -676,6 +676,7 @@ large ,/adj./@大的;
 lasso ,/n./@套索;,/v./@拉攏;,/v./@套捕;
 latch ,/n./@门闩;,/n./@弹簧锁;,/vt./@閂上;
 later ,/adv./@后來;,/adv./@稍後;,/adj./@更遲的;
+lathe ,/n./@車床;
 Latin ,/n./@拉丁語;,/n./@拉丁人;,/adj./@拉丁語的;,/adj./@拉丁人的;
 laugh ,/v./@笑;
 laver ,/n./@紫菜;,/n./@水盆;
@@ -984,7 +985,7 @@ regal ,/adj./@帝王的;,/adj./@王室的;,/adj./@莊嚴的;,/adj./@豪華的;
 rehab ,/n./@康复;,/vt./@修复;
 reign ,/v./@統治;,/v./@支配;
 relax ,/v./@放松;
-relay ,/v./@转播;,/v./@中继;
+relay ,/v./@转播;,/v./@中继;,/v./@傳達;,/v./@轉達;,/n./@輪換者;,/n./@接力賽;,/n./@中繼轉播;,/n./@繼電器;
 relic ,/n./@遺產;
 repay ,/vt./@歸還;
 repel ,/v./@抵制;,/v./@擊退;,/v./@排斥;,/v./@驅離;
@@ -1028,6 +1029,7 @@ savor ,/n./@滋味;,/n./@氣味;,/n./@食欲;,/v./@品嘗;
 savvy ,/n./@常识;,/n./@悟性;,/adj./@精明的;,/vt./@懂;,/vt./@知曉;
 scale ,/n./@魚鱗;,/n./@規模;,/n./@刻度;,/n./@比例;,/n./@等級;,/n./@秤;,/n./@天平;,/n./@秤盤;
 scalp ,/n./@頭皮;,/n./@帶髮頭皮;,/n./@戰利品;,/vt./@轉手倒賣;,/vt./@剝下頭皮;,/vt./@严惩;
+scant ,/adj./@不足的;,/adj./@貧乏的;,/adj./@缺乏的;,/adj./@勉強夠的;
 scape ,/n./@花莖;,/n./@觸角根;,/n./@羽軸;,/n./@柱身;
 scare ,/v./@驚嚇;
 scarf ,/n./@圍巾;
