--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -303,6 +303,7 @@ clever ,/adj./@聰明的;
 cliche ,/n./@陈词滥调;,/adj./@陈腐的;,/n./@铅版;
 client ,/n./@客戶;,/n./@用户;,/n./@顧客;
 climax ,/n./@高潮;,/n./@頂點;
+clinch ,/vt./@釘牢;,/vt./@敲定;,/vi./@扭抱;,/vi./@擁抱;,/n./@扭抱;
 clinic ,/n./@診所;
 clique ,/n./@派係;
 clompy ,/redirected./@target="clumpy";
@@ -311,6 +312,7 @@ clumsy ,/adj./@笨拙的;
 clunky ,/adj./@笨重的;,/adj./@過時的;,/adj./@難用的;,/adj./@哐啷作響的;,/adj./@哐噹作響的;
 clutch ,/v./@抓緊;
 coarse ,/adj./@粗糙的;,/adj./@粗的;,/adj./@粗劣的;,/adj./@粗俗的;,/adj./@粗魯的;
+cobble ,/n./@鵝卵石;
 cocoon ,/n./@茧;,/n./@蚕茧;
 coerce ,/v./@強制;,/v./@迫使;,/vt./@强迫;
 coffee ,/n./@咖啡;
@@ -538,6 +540,7 @@ estrus ,/redirected./@target="oestrus";
 ethnic ,/adj./@種族的;,/adj./@人種的;
 eulogy ,/n./@悼詞;,/n./@頌詞;,/n./@頌揚;
 evenly ,/adv./@均勻地;,/adj./@平均地;
+evince ,/vt./@表明;,/vt./@表露;,/vt./@顯示;,/vt./@表現出;
 evolve ,/v./@发展;,/v./@進化;
 exceed ,/v./@超過;
 except ,/v./@除了;
@@ -998,7 +1001,7 @@ oblige ,/v./@迫使;,/v./@施恩@惠;
 oblong ,/adj./@橢圓形的;,/adj./@矩形的;
 obsess ,/v./@迷住;,/v./@迷戀;,/v./@著迷;
 obtain ,/v./@獲得;,/v./@習得;
-obtuse ,/adj./@遲鈍的;,/adj./@圓頭的;,/adj./@不鋒利的;
+obtuse ,/adj./@遲鈍的;,/adj./@圓頭的;,/adj./@不鋒利的;,/adj./@愚鈍的;,/adj./@鈍角的;
 occupy ,/v./@佔用;,/v./@佔據;,/v./@佔領;,/v./@擔任;
 ocelot ,/n./@豹貓;
 ocular ,/adj./@眼睛的;,/adj./@視覺的;
@@ -1402,7 +1405,7 @@ sonnet ,/n./@十四行詩;
 sooner ,/adv./@更快;
 sordid ,/adj./@骯髒的;,/adj./@卑鄙的;,/adj./@暗淡的;
 sorrow ,/n./@悲傷;
-sortie ,/n./@出击;,/n./@军事突袭;,/n./@外出;,/n./@出动架次;
+sortie ,/n./@出击;,/n./@军事突袭;,/n./@外出;,/n./@出动架次;,/n./@突擊;
 source ,/n./@源頭;
 soviet ,/n./@蘇維埃;
 sparse ,/adj./@稀疏的;,/adj./@稀少的;
