--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -565,6 +565,7 @@ factory ,/n./@工廠;
 factual ,/adj./@事實的;,/adj./@事实性的;,/adj./@如實的;,/adj./@真實的;
 faculty ,/n./@官能;,/n./@本領;,/n./@學係;,/n./@院系;,/n./@才能;
 failure ,/n./@失敗;
+fallacy ,/n./@謬誤;,/n./@謬論;,/n./@謬誤的推理;
 fanatic ,/n./@狂熱者;,/n./@狂熱分子;,/n./@入迷者;,/adj./@狂熱的;,/adj./@入迷的;
 fantasy ,/n./@幻想;
 faraway ,/adj./@很遠的;
@@ -746,7 +747,7 @@ inflict ,/vt./@強加;,/vt./@給予@打擊;,/vt./@使@遭受;
 ingress ,/n./@进入;,/n./@入口;,/n./@入境;
 inhabit ,/v./@居住;
 inherit ,/v./@繼承;,/v./@遺傳;
-inhibit ,/v./@抑制;
+inhibit ,/v./@抑制;,/vt./@約束;,/vt./@阻礙;
 initial ,/adj./@初始的;
 inquest ,/n./@驗屍;,/n./@審訊;,/n./@審理;,/n./@調查;,/n./@審查;
 inquire ,/v./@詢問;
@@ -1113,6 +1114,7 @@ promote ,/v./@促進;,/v./@提拔;,/v./@推銷;
 pronoun ,/n./@代詞;
 prophet ,/n./@先知;
 propose ,/v./@提議;,/vt./@提出;,/vt./@打算;
+prosaic ,/adj./@散文的;,/adj./@散文體的;,/adj./@乏味的;,/adj./@平淡無奇的;,/adj./@無新意的;
 protect ,/v./@保護;
 protein ,/n./@蛋白質;
 protest ,/v./@反對;,/v./@抗議;
@@ -1240,6 +1242,7 @@ scourge ,/v./@鞭打;,/v./@痛斥;,/n./@鞭;,/n./@災禍;
 Scouser ,/n./@利物浦人;
 scratch ,/v./@抓;,/v./@搔;,/v./@劃;
 screech ,/v./@尖叫;,/n./@尖叫;
+scuffle ,/n./@扭打;,/vi./@扭打;
 scumbag ,/n./@卑鄙的家伙;
 seagull ,/n./@海鷗;
 seastar ,/n./@海星;
