--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -369,7 +369,7 @@ disarray ,/n./@無序;,/n./@杂乱;,/n./@混乱;,/vt./@弄亂;
 disaster ,/n./@灾难;
 disciple ,/n./@门徒;
 disclaim ,/v./@否認;,/v./@放棄;
-disclose ,/v./@揭開;,/v./@透露;
+disclose ,/v./@揭開;,/v./@透露;,/vt./@揭露;,/vt./@揭發;
 discorso ,/n./@演讲;
 discount ,/n./@打折;
 discover ,/v./@发现;
@@ -449,6 +449,7 @@ enormous ,/adj./@龐大的;,/adj./@巨大的;,/adj./@極大的;
 entangle ,/v./使@纠缠;
 entirely ,/adv./@完全地;
 entirety ,/n./@全部;,/n./@總體;,/n./@全體;,/n./@完整;
+entrails ,/n./@內臟;,/n./@內部;
 entrance ,/n./@入口;
 entrench ,/v./@確立;,/v./@牢固;,/v./@挖掘;,/v./@用壕溝圍住;
 envelope ,/n./@信封;,/n./@外殼;,/n./@氣囊;
@@ -684,6 +685,7 @@ invasive ,/adj./@侵略性的;,/adj./@侵入的;,/adj./@开刀的;,/adj./@侵擾
 investor ,/n./@投资者;
 irrigate ,/v./@灌溉;
 irritate ,/v./@惹怒;
+isotopic ,/adj./@同位素的;
 Japanese ,/n./@日本人;
 jaundice ,/n./@黃疸;,/n./@偏見;,/n./@怪癖;,/vt./@(使)懷偏見;,/vt./@(使)患黃疸;
 jealousy ,/n./@妒忌;
