--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -206,6 +206,7 @@ cigarette ,/n./@香烟;
 cinematic ,/adj./@電影的;,/adj./@有电影特征的;
 circuitry ,/n./@电路;,/n./@电路系统;,/n./@电路装置;,/n./@电路元件;
 circulate ,/v./@循环;
+citizenry ,/n./@全體公民;,/n./@全體市民;
 classical ,/adj./@經典的;,/adj./@古典的;
 classmate ,/n./@同学;
 claustrum ,/n./@屏狀體;
@@ -284,6 +285,7 @@ curiosity ,/n./@好奇心;,/n./@好奇;
 currently ,/adv./@目前;
 curricula ,/n./@課程;
 curvature ,/n./@彎曲;,/n./@曲率;,/n./@弯曲度;
+custodian ,/n./@保管人;,/n./@監護人;,/n./@守衛;,/n./@看管者;
 customary ,/adj./@習慣的;,/adj./@通常的;,/adj./@慣常的;,/adj./@合乎習俗的;
 customise ,/v./@定制;,/v./@个性化;
 customize ,/v./@定制;
@@ -719,6 +721,7 @@ momentous ,/adj./@重要的;
 monastery ,/n./@修道院;,/n./@寺院;
 monologue ,/n./@獨白;
 monstrous ,/adj./@可怕的;,/adj./@極惡的;
+moscovium ,/n./@鏌;
 moustache ,/n./@胡子;,/n./@胡须;
 mysticism ,/n./@神祕主義;,/n./@玄想;,/n./@通靈;
 mythology ,/n./@神話;,/n./@神話學;,/n./@神話集;
