--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -626,6 +626,7 @@ prosthesis
 prosthetic
 protection
 protrusion
+proverbial
 providence
 provincial
 psychopath
@@ -792,6 +793,7 @@ unilateral
 university
 unorthodox
 unreliable
+unromantic
 unsatiable
 untethered
 unwinnable
