--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -81,6 +81,7 @@ conceivable
 concentrate
 conditional
 condominium
+confabulate
 confederate
 confinement
 confounding
@@ -434,6 +435,7 @@ superficial
 superiority
 supervision
 suppression
+suspenseful
 sustainable
 Switzerland
 sympathetic
