--- a/Files/lang/en/english13.csv
+++ b/Files/lang/en/english13.csv
@@ -108,6 +108,7 @@ predominantly
 prepositional
 procrastinate
 pronunciation
+pseudoscience
 psychological
 psychosomatic
 quadrilateral
@@ -127,6 +128,7 @@ seismological
 semiconductor
 sophisticated
 specification
+stereotypical
 subordination
 superannuated
 supplementary
