--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -676,6 +676,7 @@ large
 lasso
 latch
 later
+lathe
 Latin
 laugh
 laver
@@ -1028,6 +1029,7 @@ savor
 savvy
 scale
 scalp
+scant
 scape
 scare
 scarf
