--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -303,6 +303,7 @@ clever
 cliche
 client
 climax
+clinch
 clinic
 clique
 clompy
@@ -311,6 +312,7 @@ clumsy
 clunky
 clutch
 coarse
+cobble
 cocoon
 coerce
 coffee
@@ -538,6 +540,7 @@ estrus
 ethnic
 eulogy
 evenly
+evince
 evolve
 exceed
 except
