--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -565,6 +565,7 @@ factory
 factual
 faculty
 failure
+fallacy
 fanatic
 fantasy
 faraway
@@ -1113,6 +1114,7 @@ promote
 pronoun
 prophet
 propose
+prosaic
 protect
 protein
 protest
@@ -1240,6 +1242,7 @@ scourge
 Scouser
 scratch
 screech
+scuffle
 scumbag
 seagull
 seastar
