--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -449,6 +449,7 @@ enormous
 entangle
 entirely
 entirety
+entrails
 entrance
 entrench
 envelope
@@ -684,6 +685,7 @@ invasive
 investor
 irrigate
 irritate
+isotopic
 Japanese
 jaundice
 jealousy
