--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -206,6 +206,7 @@ cigarette
 cinematic
 circuitry
 circulate
+citizenry
 classical
 classmate
 claustrum
@@ -284,6 +285,7 @@ curiosity
 currently
 curricula
 curvature
+custodian
 customary
 customise
 customize
@@ -719,6 +721,7 @@ momentous
 monastery
 monologue
 monstrous
+moscovium
 moustache
 mysticism
 mythology
