--- a/Files/lang/phrases/2 word phrase.csv
+++ b/Files/lang/phrases/2 word phrase.csv
@@ -183,3 +183,6 @@
 ,trip,out,產生幻覺,處於幻覺之中;
 ,en,masse,全體,一齊;
 ,hazardous,material,危險物品;
+,cobble,together,胡亂拼湊,草率拼湊;
+,trip,over,被...絆倒;
+,hang,on,握緊,抓緊,堅持,稍等,等候;
