--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -87,7 +87,9 @@ auditorium ,/n./@禮堂;,/n./@會堂;,/n./@觀衆席;
 auscultate ,/v./@听诊;,/v./@听诊;
 auspicious ,/adj./@吉祥的;,/adj./@吉兆的;
 autocratic ,/adj./@獨裁的;
+automation ,/n./@自動化;
 automobile ,/n./@汽车;
+automotive ,/adj./@汽車的;,/adj./@機動車的;
 autonomous ,/adj./@自主的;,/adj./@自治的;,/adj./@獨立存在的;
 background ,/n./@背景;,/n./@經歷;
 banishment ,/n./@驱逐;,/n./@放逐;
