--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -24,6 +24,7 @@ apprehension ,/n./@憂慮;
 architecture ,/n./@架构;
 asphyxiation ,/n./@窒息;
 assassinator ,/n./@刺客;
+astrophysics ,/n./@天體物理學;
 asynchronous ,/adj./@异步的;,/adj./@不同时的;
 auscultation ,/n./@听诊;
 authenticate ,/v./@鑒定;,/v./@證明;,/vt./@證實;
