--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -216,6 +216,7 @@ carol ,/n./@頌歌;,/v./@歡樂地唱;
 carry ,/v./@搬運;,/v./@攜帶;
 catch ,/v./@抓;,/v./@獲;
 cater ,/v./@迎合;,/v./@投合;
+caulk ,/vt./@填隙;,/vt./@捻縫;,/n./@填隙物;
 cause ,/v./@導致;
 cavil ,/vi./@挑剔;,/vi./@吹毛求疵;
 cease ,/v./@停止;
