--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -249,6 +249,7 @@ canvas ,/n./@帆布;,/n./@油畫布;,/n./@油畫;,/n./@風帆;,/n./@帳篷;,/adj
 canyon ,/n./@峽谷;
 capita ,/n./@人;
 carbon ,/n./@碳;
+careen ,/vi./@側傾;,/vi./@橫衝直撞;,/vi./@失控猛衝;,/vt./@斜翻;,/vt./@斜傾;
 career ,/n./@事業;,/n./@職業;,/n./@生涯;
 caress ,/v./@愛撫;,/v./@撫摸;,/v./@擁抱;,/v./@接吻;
 carnal ,/adj./@肉體的;,/adj./@肉慾的;,/adj./@淫蕩的;,/adj./@性慾的;
