--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -1245,6 +1245,7 @@ screech ,/v./@尖叫;,/n./@尖叫;
 scuffle ,/n./@扭打;,/vi./@扭打;
 scumbag ,/n./@卑鄙的家伙;
 seagull ,/n./@海鷗;
+sealant ,/n./@密封材料;,/n./@密封物;,/n./@密封劑;
 seastar ,/n./@海星;
 seclude ,/vt./@隔离;,/vt./@隔绝;,/vt./@孤立;
 secrecy ,/n./@秘密;
