--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -587,6 +587,7 @@ handsome ,/adj./@帅气的;
 haystack ,/n./@乾草堆;
 headache ,/n./@头痛;
 headline ,/n./@头条;
+headlong ,/adv./@頭朝前地;,/adj./@頭朝前的;,/adv./@莽撞地;,/adj./@莽撞的;
 hedgehog ,/n./@刺猬;
 hedonism ,/n./@享樂主義;,/n./@快樂主義;
 hegemony ,/n./@霸權;,/n./@領導權;
