--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -338,6 +338,7 @@ extinction ,/n./@灭亡;
 extinguish ,/v./使@消亡;,/v./@熄灭;,/v./@压制;
 extraction ,/n./@提取;,/n./@摘要;,/n./@出身;
 facilitate ,/v./@使便利;,/v./@使容易;
+factuality ,/n./@事實性;,/n./@真實性;
 familyname ,/n./@姓;
 fatalistic ,/adj./@宿命论的;
 federation ,/n./@聯邦;,/n./@聯合;,/n./@聯盟;,/n./@聯邦政府;
@@ -588,6 +589,7 @@ philosophy ,/n./@哲学;
 Phoenician ,/n./@腓尼基人;,/n./@腓尼基語;,/adj./@腓尼基的;,/adj./@腓尼基人的;,/adj./@腓尼基語的;
 phonograph ,/n./@留声机;,/n./@唱机;
 phosphorus ,/n./@磷;
+photometry ,/n./@光度學;
 pickpocket ,/n./@扒手;,/n./@小偷;
 plantation ,/n./@種植園;
 plasticity ,/n./@可塑性;
@@ -602,6 +604,7 @@ precedence ,/n./@領先;
 prediction ,/n./@预言;
 preferable ,/adj./@更合适的;,/adj./@更好的;,/adj./@更可取的;
 presidency ,/n./@总统任期;
+prevalence ,/n./@流行;,/n./@盛行;,/n./@普遍;,/n./@流行程度;,/n./@普遍性;
 prevocalic ,/adj./@元音前的;
 privileged ,/adj./@荣幸的;
 procedural ,/adj./@过程式的;,/adj./@程序性的;
@@ -640,6 +643,7 @@ quadrangle ,/n./@四邊形;,/n./@四方院子;
 quarantine ,/n./@隔離檢疫;,/n./@隔離區;,/n./@隔離期;,/n./@隔離檢疫期;,/vt./@隔離;,/vi./@實行隔離;
 quintuplet ,/n./@五胞胎之一;
 radicalism ,/n./@激进主义;
+radiometry ,/n./@輻射度量學;
 radiosonde ,/n./@無線電高空測候器;,/n./@無線電探空儀;
 reasonable ,/adj./@合理的;
 receptacle ,/n./@儲藏所;,/n./@容器;
@@ -753,6 +757,7 @@ synthetize ,/redirected./@target="synthesize";
 systematic ,/adj./@系統的;,/adj./@有組織的;
 tabernacle ,/n./@帳篷;,/n./@聖體盒;
 technetium ,/n./@鎝;
+technician ,/n./@技師;,/n./@技術員;,/n./@技術人員;,/n./@技巧純熟的人;
 technocrat ,/n./@技術官僚;,/n./@技術專家官員;
 technology ,/n./@技术;
 telepathic ,/adj./@心靈感應的;,/adj./@傳心術的;
