--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -434,7 +434,7 @@ subtraction ,/n./@减;
 superficial ,/adj./@表面的;,/adj./@膚淺的;
 superiority ,/n./@优越;,/n./@优势;,/n./@优越感;,/n./@优越性;
 supervision ,/n./@監督;
-suppression ,/n./@鎮壓;,/n./@壓制;,/n./@封鎖;
+suppression ,/n./@鎮壓;,/n./@壓制;,/n./@封鎖;,/n./@查禁;
 suspenseful ,/adj./@緊張的;,/adj./@擔心的;,/adj./@提心吊膽的;,/adj./@扣人心弦的;,/adj./@懸疑的;,/adj./@有懸念的;
 sustainable ,/adj./@可持续的;
 Switzerland ,/n./@瑞士;
