--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -48,6 +48,7 @@ demonstration ,/n./@示範;,/n./@展示;,/n./@示威;
 demonstrative ,/adj./@指示的;,/adj./@感情外露的;,/n./@指示詞;
 deterioration ,/n./@惡化;,/n./@退化;,/n./@墮落;
 determination ,/n./@决心;
+deterministic ,/adj./@決定論的;
 discretionary ,/adj./@任意的;,/adj./@自由决定的;
 disfiguration ,/n./@毁容;,/n./@畸形;
 distinguished ,/n./@卓越的;
