--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -255,6 +255,7 @@ caress ,/v./@愛撫;,/v./@撫摸;,/v./@擁抱;,/v./@接吻;
 carnal ,/adj./@肉體的;,/adj./@肉慾的;,/adj./@淫蕩的;,/adj./@性慾的;
 carpet ,/n./@地毯;
 carrot ,/n./@胡蘿蔔;
+cartel ,/n./@卡特爾;,/n./@企業聯盟;
 carton ,/n./@紙箱;
 casino ,/n./@賭場;
 casket ,/n./@小箱;,/n./@小盒;,/n./@骨灰盒;,/n./@棺材;
@@ -433,6 +434,7 @@ derive ,/v./@源于;
 desert ,/n./@沙漠;,/n./@荒原;,/v./@遺棄;,/v./@離棄;,/v./@抛棄;,/v./@放棄;,/v./@擅離;,/v./@逃跑;,/v./@逃亡;,/n./@賞罰;,/n./@功德;,/n./@功勞;,/adj./@荒蕪的;
 design ,/v./@設計;
 desire ,/vt./@渴望;,/n./@慾望;,/n./@渴望;,/n./@情慾;
+desist ,/vi./@停止;
 detach ,/v./@分離;,/v./@拆卸;
 detail ,/n./@細節;
 detain ,/vt./@拘留;,/vt./@扣留;,/vt./@留住;
@@ -539,6 +541,7 @@ estate ,/n./@財產;,/n./@身份;
 esteem ,/n./@尊重;,/n./@尊敬;,/vt./@尊敬;,/v./@認爲;,/v./@考慮;,/v./@估價;
 estrus ,/redirected./@target="oestrus";
 ethnic ,/adj./@種族的;,/adj./@人種的;
+Euclid ,/n./@歐幾里得;
 eulogy ,/n./@悼詞;,/n./@頌詞;,/n./@頌揚;
 evenly ,/adv./@均勻地;,/adj./@平均地;
 evince ,/vt./@表明;,/vt./@表露;,/vt./@顯示;,/vt./@表現出;
@@ -684,6 +687,7 @@ grocer ,/n./@雜貨店;
 grotto ,/n./@洞穴;,/n./@洞室;
 ground ,/n./@場地;,/n./@地面;,/n./@理由;,/n./@根據;
 growth ,/n./@增長;,/n./@發展;,/n./@生長;
+grudge ,/n./@積怨;,/n./@怨恨;,/n./@妒忌;,/n./@嫌隙;,/vt./@妒忌;,/vt./@勉強地做;,/vt./@勉強地給;,/vt./@嫉妒;,/vt./@勉強地准許;,/vt./@不情願做;
 grumpy ,/adj./@脾氣暴躁的;
 guffaw ,/v./@哄笑;
 guilty ,/adj./@有罪的;,/adj./@內疚的;
@@ -743,6 +747,7 @@ hunger ,/n./@饑餓;
 hungry ,/adj./@饑餓的;
 hybrid ,/n./@雜種;,/adj./@混合的;,/adj./@雜交的;,/n./@合成物;,/adj./@雜種的;,/adj./@混合而成的;,/adj./@混血的;
 hyper- ,/pref./@在上;,/pref./@超過;,/pref./@過度;
+iconic ,/adj./@代表性的;,/adj./@偶像級的;,/adj./@符號性的;,/adj./@圖標的;,/adj./@圖符的;
 ignite ,/v./@點燃;,/vi./@燃燒;
 ignore ,/v./@忽視;,/v./@忽略;
 immune ,/v./@免疫;
@@ -760,7 +765,7 @@ indeed ,/adv./@當然;,/adv./@確實;
 indent ,/v./@縮行;
 indict ,/v./@起訴;,/v./@控告;,/v./@告發;
 induce ,/v./@引誘;,/v./@引起;
-infamy ,/n./@惡名;,/n./@臭名;,/n./@醜惡;
+infamy ,/n./@惡名;,/n./@臭名;,/n./@醜惡;,/n./@臭名昭著;,/n./@聲名狼藉;
 infant ,/n./@嬰兒;
 infect ,/v./@感染;,/v./@傳染;
 infill ,/v./@填實;,/v./@填入;
@@ -925,6 +930,7 @@ minute ,/n./@分鍾;
 mirage ,/n./@海市蜃樓;,/n./@幻景;,/n./@幻象;,/n./@妄想;
 mirror ,/n./@鏡子;
 misery ,/v./@苦難;
+misfit ,/n./@不適應環境的人;,/n./@不為別人接受的人;
 mishap ,/n./@厄運;
 mister ,/n./@先生;,/n./@平民;
 mitten ,/n./@連指手套;,/n./@露指手套;,/n./@拳擊手套;
@@ -959,6 +965,7 @@ mutant ,/n./@突變體;,/adj./@突變的;
 mutate ,/v./@變化;,/v./@改變;,/v./@突變;
 mutter ,/v./@咕噥;
 mutual ,/adj./@相互的;
+muzzle ,/n./@口套;,/n./@口鼻;,/n./@槍口;,/n./@炮口;,/vt./@戴上口套;,/vt./@使緘默;,/vt./@箝制...的言論;,/vt./@封鎖...的言論;
 myopia ,/n./@近視;,/n./@目光短淺;
 myself ,/pron./@我自己;
 mystic ,/adj./@神秘的;
@@ -1181,6 +1188,7 @@ really ,/adv./@眞的;,/adv./@眞實地;
 realty ,/n./@房地產;,/n./@不動產;
 reason ,/n./@原因;
 rebate ,/n./@囘扣;,/n./@折扣;
+rebuff ,/vt./@斷然拒絕;,/n./@斷然拒絕;,/vt./@回絕;,/n./@回絕;
 rebuke ,/vt./@指責;,/vt./@非難;,/vt./@訓斥;,/n./@指責;,/n./@非難;,/n./@訓斥;
 recall ,/v./@想起;,/v./@回憶;,/v./@找回;,/v./@撤銷;
 recast ,/v./@重铸;
