--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -120,7 +120,7 @@ baklava ,/n./@蜜糖果仁千层酥;,/n./@果仁蜜饼;
 balance ,/n./@平衡;
 balcony ,/n./@陽台;,/n./@露台;,/n./@包廂;,/n./@樓廳;
 balloon ,/n./@氣球;
-baloney ,/n./@胡話;,/n./@瞎扯;
+baloney ,/n./@胡話;,/n./@瞎扯;,/n./@胡扯;,/n./@胡說;
 baptise ,/v./@施洗;,/v./@洗禮;,/v./@洗滌;
 baptize ,/v./@施洗;,/v./@命名;
 bargain ,/v./@討價還價;
@@ -424,6 +424,7 @@ destine ,/v./@註定;,/v./@預定;
 destiny ,/n./@命運;,/n./@天意;,/n./@定數;
 destroy ,/v./@摧毀;
 develop ,/v./@发展;
+deviant ,/adj./@越軌的;,/adj./@離譜的;,/adj./@異常的;,/adj./@偏常的;,/adj./@怪異的;,/n./@偏常者;,/n./@異常物;
 deviate ,/vi./@偏离;,/vi./@背离;,/vi./@脫離;,/vt./@使脫軌;
 dextral ,/adj./@右側的;,/adj./@用右手的;,/adj./@右旋的;
 diagram ,/n./@圖表;
@@ -479,7 +480,7 @@ dukedom ,/n./@公國;,/n./@公爵地位;,/n./@公爵領地;
 dungeon ,/n./@地牢;
 durable ,/adj./@耐用的;,/adj./@持久的;
 dustbin ,/n./@垃圾桶;,/n./@垃圾箱;
-dwindle ,/v./@减少;,/v./@变小;,/v./@缩小;
+dwindle ,/v./@减少;,/v./@变小;,/v./@缩小;,/vi./@漸漸減少;,/vi./@漸漸變小;
 dynamic ,/adj./@動態的;
 earflap ,/n./@耳罩;
 earnest ,/adj./@認眞的;
@@ -699,6 +700,7 @@ heather ,/adj./@雜色的;,/n./@石南;
 heating ,/n./@供暖;
 heavily ,/adv./@重地;
 hectare ,/n./@公頃;
+hegemon ,/n./@霸主;,/n./@霸權國家;
 heiress ,/n./@女繼承人;
 helpful ,/adj./@有益的;,/adj./@有幫助的;,/adj./@有用的;
 hexagon ,/n./@六邊形;,/n./@六角形;
@@ -1509,7 +1511,7 @@ version ,/n./@版本;
 vertigo ,/n./@眩暈;
 vestige ,/n./@遺迹;,/n./@残迹;,/n./@丝毫;,/n./@残余;
 veteran ,/n./@老兵;
-vibrant ,/adj./@振動的;,/adj./@充滿生氣的;
+vibrant ,/adj./@振動的;,/adj./@充滿生氣的;,/adj./@明亮的;,/adj./@鮮明的;,/adj./@響亮的;
 vibrate ,/v./@振動;,/vi./@顫動;
 vicious ,/adj./@惡性的;
 victory ,/n./@勝利;
