--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -915,6 +915,7 @@ peculiar ,/adj./@独特的;,/adj./@特殊的;,/adj./@奇怪的;,/adj./@罕見的
 pedestal ,/n./@基架;,/n./@基座;,/n./@基础;,/n./@支持;
 pedicure ,/n.//v./@修脚;,/n.//v./@足療;
 pedigree ,/n./@血统;,/adj./@纯种的;
+peerless ,/adj./@無與倫比的;,/adj./@無雙的;,/adj./@無可匹敵的;,/adj./@舉世無雙的;,/adj./@絕世的;
 penalize ,/v./@惩罚;
 pendulum ,/n./@摆;
 penitent ,/adj./@懺悔的;,/adj./@悔過的;
@@ -1162,6 +1163,7 @@ stealthy ,/adj./@秘密的;,/adj./@偷偷摸摸的;,/adj./@鬼鬼祟祟的;
 steerage ,/n./@统舱;,/n./@舵效;,/n./@指導;,/n./@指引;
 stickler ,/n./@頑固的人;,/n./@堅持的人;
 stimulus ,/n./@刺激;,/n./@刺激物;,/n./@激勵;
+stoppage ,/n./@中止;,/n./@阻塞;,/n./@阻礙;,/n./@停工;,/n./@罷工;,/n./@停止;,/n./@中斷;
 straight ,/adj./@直的;,/adj./@直接的;
 stranger ,/n./@陌生人;
 strangle ,/v./@勒死;,/vt./@扼死;,/vt./@絞死;
