--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -436,6 +436,7 @@ ethnicity ,/n./@種族特點;,/n./@種族背景;,/n./@種族淵源;
 etiquette ,/n./@禮節;,/n./@礼仪;,/n./@规矩;
 etymology ,/n./@词源;,/n./@词源学;
 Eucharist ,/n./@聖餐;,/n./@聖體;
+Euclidean ,/adj./@歐幾里得的;
 euthanize ,/vt./@安乐死;
 evaporate ,/v./@蒸發;,/v./@脫水;,/v./@消失;
 evolution ,/n./@進化;,/n./@發展;
@@ -492,6 +493,7 @@ foreclose ,/v./@沒收;,/v./@阻止;,/v./@排除;
 formality ,/n./@礼节;
 formation ,/n./@形成;,/n./@構造;
 fortitude ,/n./@剛毅;,/n./@堅毅;,/n./@不屈不撓;,/n./@堅忍;
+fortnight ,/n./@兩星期;,/n./@十四日;
 fortunate ,/adj./@幸運的;
 framework ,/n./@框架;,/n./@体系;
 franchise ,/n./@特權;,/n./@公民權;,/n./@經銷權;,/n./@選舉權;
@@ -753,6 +755,7 @@ offensive ,/adj./@冒犯的;
 olfactory ,/n./@嗅觉;,/adj./@嗅觉的;,/n./@鼻;
 onslaught ,/n./@攻擊;,/n./@襲擊;
 operation ,/n./@操作;,/n./@手术;,/n./@经营;
+operative ,/n./@技工;,/n./@工人;,/n./@特工;,/n./@特務;,/n./@間諜;,/adj./@運行著的;,/adj./@起作用的;,/adj./@有效的;,/adj./@手術的;
 opportune ,/adj./@及時的;,/adj./@湊巧的;
 orchestra ,/n./@管弦樂隊;,/n./@交響樂;
 originate ,/v./@创始;,/vt./@發明;,/vt./@引發;,/vt./@創作;
