--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -338,6 +338,7 @@ extinction
 extinguish
 extraction
 facilitate
+factuality
 familyname
 fatalistic
 federation
@@ -588,6 +589,7 @@ philosophy
 Phoenician
 phonograph
 phosphorus
+photometry
 pickpocket
 plantation
 plasticity
@@ -602,6 +604,7 @@ precedence
 prediction
 preferable
 presidency
+prevalence
 prevocalic
 privileged
 procedural
@@ -640,6 +643,7 @@ quadrangle
 quarantine
 quintuplet
 radicalism
+radiometry
 radiosonde
 reasonable
 receptacle
@@ -753,6 +757,7 @@ synthetize
 systematic
 tabernacle
 technetium
+technician
 technocrat
 technology
 telepathic
