--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -528,6 +528,7 @@ gamut
 gauge
 gaunt
 geese
+genie
 genre
 genus
 ghost
@@ -726,6 +727,7 @@ lower
 loyal
 lucid
 lucky
+lumen
 lunar
 lunch
 lunge
@@ -1284,6 +1286,7 @@ thing
 think
 third
 thong
+thorn
 those
 three
 threw
