--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -255,6 +255,7 @@ caress
 carnal
 carpet
 carrot
+cartel
 carton
 casino
 casket
@@ -433,6 +434,7 @@ derive
 desert
 design
 desire
+desist
 detach
 detail
 detain
@@ -539,6 +541,7 @@ estate
 esteem
 estrus
 ethnic
+Euclid
 eulogy
 evenly
 evince
@@ -684,6 +687,7 @@ grocer
 grotto
 ground
 growth
+grudge
 grumpy
 guffaw
 guilty
@@ -743,6 +747,7 @@ hunger
 hungry
 hybrid
 hyper-
+iconic
 ignite
 ignore
 immune
@@ -925,6 +930,7 @@ minute
 mirage
 mirror
 misery
+misfit
 mishap
 mister
 mitten
@@ -959,6 +965,7 @@ mutant
 mutate
 mutter
 mutual
+muzzle
 myopia
 myself
 mystic
@@ -1181,6 +1188,7 @@ really
 realty
 reason
 rebate
+rebuff
 rebuke
 recall
 recast
