--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -424,6 +424,7 @@ destine
 destiny
 destroy
 develop
+deviant
 deviate
 dextral
 diagram
@@ -699,6 +700,7 @@ heather
 heating
 heavily
 hectare
+hegemon
 heiress
 helpful
 hexagon
