--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -915,6 +915,7 @@ peculiar
 pedestal
 pedicure
 pedigree
+peerless
 penalize
 pendulum
 penitent
@@ -1162,6 +1163,7 @@ stealthy
 steerage
 stickler
 stimulus
+stoppage
 straight
 stranger
 strangle
