--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -436,6 +436,7 @@ ethnicity
 etiquette
 etymology
 Eucharist
+Euclidean
 euthanize
 evaporate
 evolution
@@ -492,6 +493,7 @@ foreclose
 formality
 formation
 fortitude
+fortnight
 fortunate
 framework
 franchise
@@ -753,6 +755,7 @@ offensive
 olfactory
 onslaught
 operation
+operative
 opportune
 orchestra
 originate
