--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -35,6 +35,7 @@ interpupillary ,/adj./@瞳孔间的;
 methodological ,/adj./@方法論的;
 mountaineering ,/n./@登山;,/n./@登山運動;
 multiplication ,/n./@乘法;,/n./@增加;
+nanotechnology ,/n./@納米科技;,/n./@納米技術;
 orthographical ,/redirected./@target="orthographic";
 pharmaceutical ,/adj./@制药的;,/adj./@制药学的;
 philanthropist ,/n./@慈善家;,/n./@博愛主義者;
