--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -422,6 +422,7 @@ spontaneous ,/adj./@自然的;,/adj./@天真率直的;,/adj./@自发的;
 standardize ,/v./@標準化;
 stereoscope ,/n./@體視鏡;,/n./@立體鏡;
 stimulation ,/n./@刺激;,/n./@激励;
+stipulation ,/n./@約定;,/n./@規定;,/n./@明確的要求;,/n./@條款;,/n./@條文;,/n./@契約;
 stomachache ,/n./@胃痛;
 subdivision ,/n./@细分;,/n./@再分;
 subjunctive ,/n./@虛擬語氣;,/adj./@虛擬的;,/n./@虛擬形式;,/adj./@虛擬語氣的;
