--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -437,7 +437,7 @@ desire ,/vt./@渴望;,/n./@慾望;,/n./@渴望;,/n./@情慾;
 desist ,/vi./@停止;
 detach ,/v./@分離;,/v./@拆卸;
 detail ,/n./@細節;
-detain ,/vt./@拘留;,/vt./@扣留;,/vt./@留住;
+detain ,/vt./@拘留;,/vt./@扣留;,/vt./@留住;,/vt./@耽擱;
 detect ,/v./@察覺;
 detour ,/vi./@绕行;,/vi./@绕道;,/n./@绕行;,/n./@绕道;
 device ,/n./@設備;
