--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -591,6 +591,7 @@ phonograph ,/n./@留声机;,/n./@唱机;
 phosphorus ,/n./@磷;
 photometry ,/n./@光度學;
 pickpocket ,/n./@扒手;,/n./@小偷;
+pictograph ,/n./@象形文字;,/n./@古代的石壁畫;,/n./@統計圖表;
 plantation ,/n./@種植園;
 plasticity ,/n./@可塑性;
 playwright ,/n./@剧作家;
