--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -1048,6 +1048,7 @@ paddle ,/v./@劃槳;,/n./@槳;,/v./@攪;,/vi./@涉水;,/vi./@蹼游;
 palace ,/n./@宮殿;
 palate ,/n./@味覺;
 pander ,/vi./@迎合;,/vi./@拉皮條;,/n./@皮條客;,/n./@老鴇;
+pandit ,/n./@梵學家;
 papist ,/n./@天主教徒;
 parade ,/n./@遊行;,/vi./@遊行;,/vi./@列隊行進;
 parcel ,/v./@分配;,/n./@包裹;
@@ -1144,6 +1145,7 @@ pseudo ,/adj./@假的;,/adj./@冒充的;,/n./@偽君子;
 psyche ,/n./@靈魂;,/n./@心智;
 public ,/adj./@公開的;
 pummel ,/v./@擊打;
+pundit ,/n./@專家;,/n./@行家;,/n./@權威人士;,/n.//redirected./@target="pandit";
 punish ,/v./@懲罰;
 purify ,/v./@净化;,/v./@純化;
 purity ,/n./@純淨;,/n./@純潔;,/n./@純粹;,/n./@純正;,/n./@貞潔;,/n./@清潔;,/n./@清白;
