--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -608,6 +608,7 @@ ingenuity ,/n./@精巧;,/n./@獨創性;,/n./@心靈手巧;
 ingrained ,/adj./@根深蒂固的;,/adj./@深入人心的;
 inorganic ,/adj./@無機的;,/adj./@無組織的;,/adj./@無生物的;
 insertion ,/n./@插入;
+insidious ,/adj./@陰險的;,/adj./@暗中滋生的;,/adj./@潛伏的;,/adj./@暗中為害的;,/adj./@暗中加劇的;
 insomniac ,/n./@不眠症患者;,/adj./@失眠的;,/n./@失眠患者;
 instigate ,/v./@唆使;,/v./@煽动;,/v./@怂恿;,/vt./@提起;,/vt./@发起;
 institute ,/n./@学会;,/n./@协会;,/v./@制定;,/v./@創立;
