--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -1048,6 +1048,7 @@ paddle
 palace
 palate
 pander
+pandit
 papist
 parade
 parcel
@@ -1144,6 +1145,7 @@ pseudo
 psyche
 public
 pummel
+pundit
 punish
 purify
 purity
