--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -464,6 +464,7 @@ hold ,/v./@持;
 hole ,/n./@洞;,/n./@孔;
 holy ,/adj./@神聖的;
 home ,/n./@家;
+honk ,/vi./@鳴喇叭;,/vt./@鳴響;,/n./@雁鳴聲;,/n./@汽車喇叭聲;
 hoof ,/v./@步行;,/n./@蹄;
 hook ,/n./@鉤子;
 hoop ,/n./@箍;,/n./@鐵環;
