--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -1112,7 +1112,7 @@ plural ,/adj./@複數的;,/n./@複數;
 pocket ,/n./@口袋;
 poetic ,/adj./@詩的;
 poetry ,/n./@詩歌;
-poison ,/n./@毒;,/v./@下毒;
+poison ,/n./@毒;,/n./@毒害;,/n./@毒藥;,/n./@毒物;,/vt./@毒死;,/vt./@毒害;,/vt./@放毒於;
 police ,/n./@警察;
 policy ,/n./@政策;
 polish ,/v./@擦亮;,/v./@磨光;,/v./@潤色;
