--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -1546,7 +1546,7 @@ welcome ,/n./@歡迎;
 welfare ,/n./@福利;
 whereas ,/conj./@然而;,/conj./@鑒于;,/conj./@盡管;
 whether ,/conj./@是否;
-whimper ,/v./@嗚咽;,/n./@嗚咽;
+whimper ,/v./@嗚咽;,/n./@嗚咽;,/vi./@啜泣;,/n./@啜泣聲;
 whistle ,/v./@吹哨;,/v./@鳴笛;,/v./@嘯叫;
 whoever ,/pron./@無論誰;
 whopper ,/n./@龐然大物;,/n./@彌天大謊;
