--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -600,6 +600,7 @@ hesitate ,/v./@犹豫;
 highborn ,/adj./@出身名門的;
 historic ,/adj./@有历史意义的;
 hitherto ,/adv./@迄今;
+holdover ,/n./@遺留物;,/n./@留任者;,/n./@剩餘物;
 holistic ,/adj./@整體的;,/adj./@全盤的;
 hologram ,/n./@全息圖;,/n./@全息攝影;,/n./@全息照相;,/n./@全息照片;,/n./@立體投影;
 homeland ,/n./@祖國;,/n./@故鄉;
